// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress demos > demo: Basic 1`] = `
"<div style="display: flex; flex-direction: column; gap: 16px; max-width: 400px;">
  <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="30" aria-valuetext="30%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 8px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 30%; height: 8px; border-radius: 100px;"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">30%</span>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info" role="progressbar" aria-valuenow="50" aria-valuetext="50%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 8px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 50%; height: 8px; border-radius: 100px;"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">50%</span>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-exception ant-progress-show-info" role="progressbar" aria-valuenow="70" aria-valuetext="70%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 8px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 70%; height: 8px; border-radius: 100px;"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">✕</span>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info" role="progressbar" aria-valuenow="100" aria-valuetext="100%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 8px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 100%; height: 8px; border-radius: 100px;"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">✓</span>
  </div>
</div>"
`;

exports[`Progress demos > demo: Circle 1`] = `
"<div style="display: flex; gap: 24px; align-items: center;">
  <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="75" aria-valuetext="75%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Circle / Dashboard -->
    <div class="ant-progress-inner" style="width: 120px; height: 120px;"><svg width="120" height="120" viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 221.48228207808043px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
        <!--v-if-->
      </svg><span class="ant-progress-text">75%</span></div>
  </div>
  <div class="ant-progress ant-progress-circle ant-progress-status-exception ant-progress-show-info" role="progressbar" aria-valuenow="70" aria-valuetext="70%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Circle / Dashboard -->
    <div class="ant-progress-inner" style="width: 120px; height: 120px;"><svg width="120" height="120" viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 206.7167966062084px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
        <!--v-if-->
      </svg><span class="ant-progress-text">✕</span></div>
  </div>
  <div class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info" role="progressbar" aria-valuenow="100" aria-valuetext="100%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Circle / Dashboard -->
    <div class="ant-progress-inner" style="width: 120px; height: 120px;"><svg width="120" height="120" viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
        <!--v-if-->
      </svg><span class="ant-progress-text">✓</span></div>
  </div>
</div>"
`;

exports[`Progress demos > demo: CircleBasic 1`] = `
"<div style="display: flex; gap: 24px; align-items: center;">
  <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="75" aria-valuetext="75%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Circle / Dashboard -->
    <div class="ant-progress-inner" style="width: 120px; height: 120px;"><svg width="120" height="120" viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 221.48228207808043px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
        <!--v-if-->
      </svg><span class="ant-progress-text">75%</span></div>
  </div>
  <div class="ant-progress ant-progress-circle ant-progress-status-exception ant-progress-show-info" role="progressbar" aria-valuenow="70" aria-valuetext="70%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Circle / Dashboard -->
    <div class="ant-progress-inner" style="width: 120px; height: 120px;"><svg width="120" height="120" viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 206.7167966062084px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
        <!--v-if-->
      </svg><span class="ant-progress-text">✕</span></div>
  </div>
  <div class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info" role="progressbar" aria-valuenow="100" aria-valuetext="100%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Circle / Dashboard -->
    <div class="ant-progress-inner" style="width: 120px; height: 120px;"><svg width="120" height="120" viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
        <!--v-if-->
      </svg><span class="ant-progress-text">✓</span></div>
  </div>
</div>"
`;

exports[`Progress demos > demo: CircleDynamic 1`] = `
"<div>
  <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="0" aria-valuetext="0%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Circle / Dashboard -->
    <div class="ant-progress-inner" style="width: 120px; height: 120px;"><svg width="120" height="120" viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 0px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
        <!--v-if-->
      </svg><span class="ant-progress-text">0%</span></div>
  </div>
  <div style="margin-top: 16px; display: flex; gap: 8px;"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">-</span>
    </button><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">+</span>
    </button></div>
</div>"
`;

exports[`Progress demos > demo: CircleMini 1`] = `
"<div style="display: flex; gap: 16px; align-items: center;">
  <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="30" aria-valuetext="30%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Circle / Dashboard -->
    <div class="ant-progress-inner" style="width: 80px; height: 80px;"><svg width="80" height="80" viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 88.59291283123217px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
        <!--v-if-->
      </svg><span class="ant-progress-text">30%</span></div>
  </div>
  <div class="ant-progress ant-progress-circle ant-progress-status-exception ant-progress-show-info" role="progressbar" aria-valuenow="70" aria-valuetext="70%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Circle / Dashboard -->
    <div class="ant-progress-inner" style="width: 80px; height: 80px;"><svg width="80" height="80" viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 206.7167966062084px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
        <!--v-if-->
      </svg><span class="ant-progress-text">✕</span></div>
  </div>
  <div class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info" role="progressbar" aria-valuenow="100" aria-valuetext="100%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Circle / Dashboard -->
    <div class="ant-progress-inner" style="width: 80px; height: 80px;"><svg width="80" height="80" viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
        <!--v-if-->
      </svg><span class="ant-progress-text">✓</span></div>
  </div>
</div>"
`;

exports[`Progress demos > demo: Dashboard 1`] = `
"<div style="display: flex; gap: 24px; align-items: center;">
  <div class="ant-progress ant-progress-dashboard ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="75" aria-valuetext="75%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Circle / Dashboard -->
    <div class="ant-progress-inner" style="width: 120px; height: 120px;"><svg width="120" height="120" viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 78.61178716340987 12.712393006311949 A 47 47 0 1 1 21.388212836590117 12.712393006311956" transform="rotate(217.5 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
        <path d="M 78.61178716340987 12.712393006311949 A 47 47 0 1 1 21.388212836590117 12.712393006311956" transform="rotate(217.5 50 50)" style="stroke-dasharray: 175.34013997848035px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
        <!--v-if-->
      </svg><span class="ant-progress-text">75%</span></div>
  </div>
  <div class="ant-progress ant-progress-dashboard ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="75" aria-valuetext="75%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Circle / Dashboard -->
    <div class="ant-progress-inner" style="width: 120px; height: 120px;"><svg width="120" height="120" viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 78.61178716340987 12.712393006311949 A 47 47 0 1 1 21.388212836590117 12.712393006311956" transform="rotate(217.5 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
        <path d="M 78.61178716340987 12.712393006311949 A 47 47 0 1 1 21.388212836590117 12.712393006311956" transform="rotate(217.5 50 50)" style="stroke-dasharray: 175.34013997848035px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
        <!--v-if-->
      </svg><span class="ant-progress-text">75%</span></div>
  </div>
</div>"
`;

exports[`Progress demos > demo: Dynamic 1`] = `
"<div style="max-width: 400px;">
  <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="0" aria-valuetext="0%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 8px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 0%; height: 8px; border-radius: 100px;"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">0%</span>
  </div>
  <div style="margin-top: 16px; display: flex; gap: 8px;"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">-</span>
    </button><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">+</span>
    </button></div>
</div>"
`;

exports[`Progress demos > demo: Format 1`] = `
"<div style="display: flex; gap: 24px; align-items: center;">
  <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="75" aria-valuetext="75%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Circle / Dashboard -->
    <div class="ant-progress-inner" style="width: 120px; height: 120px;"><svg width="120" height="120" viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 221.48228207808043px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
        <!--v-if-->
      </svg><span class="ant-progress-text">75 Days</span></div>
  </div>
  <div class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info" role="progressbar" aria-valuenow="100" aria-valuetext="100%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Circle / Dashboard -->
    <div class="ant-progress-inner" style="width: 120px; height: 120px;"><svg width="120" height="120" viewBox="0 0 100 100" class="ant-progress-circle">
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
        <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
        <!--v-if-->
      </svg><span class="ant-progress-text">Done</span></div>
  </div>
</div>"
`;

exports[`Progress demos > demo: Gradient 1`] = `
"<div style="display: flex; flex-direction: column; gap: 16px; max-width: 400px;">
  <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="99.9" aria-valuetext="99.9%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 8px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 99.9%; height: 8px; border-radius: 100px; background: linear-gradient(to right, #108ee9, #87d068);"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">99.9%</span>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="99.9" aria-valuetext="99.9%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 8px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 99.9%; height: 8px; border-radius: 100px; background: linear-gradient(to right, #108ee9, #87d068);"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">99.9%</span>
  </div>
</div>"
`;

exports[`Progress demos > demo: GradientLine 1`] = `
"<div style="display: flex; flex-direction: column; gap: 16px; max-width: 400px;">
  <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="99.9" aria-valuetext="99.9%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 8px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 99.9%; height: 8px; border-radius: 100px;"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">99.9%</span>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info" role="progressbar" aria-valuenow="99.9" aria-valuetext="99.9%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 8px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 99.9%; height: 8px; border-radius: 100px; background: linear-gradient(to right, #108ee9, #87d068);"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">99.9%</span>
  </div>
</div>"
`;

exports[`Progress demos > demo: Line 1`] = `
"<div style="display: flex; flex-direction: column; gap: 16px; max-width: 400px;">
  <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="30" aria-valuetext="30%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 8px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 30%; height: 8px; border-radius: 100px;"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">30%</span>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info" role="progressbar" aria-valuenow="50" aria-valuetext="50%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 8px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 50%; height: 8px; border-radius: 100px;"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">50%</span>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-exception ant-progress-show-info" role="progressbar" aria-valuenow="70" aria-valuetext="70%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 8px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 70%; height: 8px; border-radius: 100px;"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">✕</span>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info" role="progressbar" aria-valuenow="100" aria-valuetext="100%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 8px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 100%; height: 8px; border-radius: 100px;"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">✓</span>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-normal" role="progressbar" aria-valuenow="50" aria-valuetext="50%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 8px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 50%; height: 8px; border-radius: 100px;"></div>
        <!--v-if-->
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`Progress demos > demo: LineMini 1`] = `
"<div style="width: 170px; display: flex; flex-direction: column; gap: 8px;">
  <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-small" role="progressbar" aria-valuenow="30" aria-valuetext="30%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 6px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 30%; height: 6px; border-radius: 100px;"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">30%</span>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info ant-progress-small" role="progressbar" aria-valuenow="50" aria-valuetext="50%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 6px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 50%; height: 6px; border-radius: 100px;"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">50%</span>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-exception ant-progress-show-info ant-progress-small" role="progressbar" aria-valuenow="70" aria-valuetext="70%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 6px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 70%; height: 6px; border-radius: 100px;"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">✕</span>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-small" role="progressbar" aria-valuenow="100" aria-valuetext="100%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <!-- Line mode -->
    <div class="ant-progress-outer">
      <div class="ant-progress-inner" style="height: 6px; border-radius: 100px;">
        <div class="ant-progress-bg" style="width: 100%; height: 6px; border-radius: 100px;"></div>
        <!--v-if-->
      </div>
    </div><span class="ant-progress-text">✓</span>
  </div>
</div>"
`;

exports[`Progress demos > demo: Linecap 1`] = `
"<div style="display: flex; flex-direction: column; gap: 16px;">
  <div style="max-width: 400px;">
    <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="75" aria-valuetext="75%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Steps mode -->
      <!-- Line mode -->
      <div class="ant-progress-outer">
        <div class="ant-progress-inner" style="height: 8px; border-radius: 0;">
          <div class="ant-progress-bg" style="width: 75%; height: 8px; border-radius: 0;"></div>
          <!--v-if-->
        </div>
      </div><span class="ant-progress-text">75%</span>
    </div>
  </div>
  <div style="display: flex; gap: 24px; align-items: center;">
    <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="75" aria-valuetext="75%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Circle / Dashboard -->
      <div class="ant-progress-inner" style="width: 120px; height: 120px;"><svg width="120" height="120" viewBox="0 0 100 100" class="ant-progress-circle">
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="square" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 221.48228207808043px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="square" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
          <!--v-if-->
        </svg><span class="ant-progress-text">75%</span></div>
    </div>
    <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="75" aria-valuetext="75%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Circle / Dashboard -->
      <div class="ant-progress-inner" style="width: 120px; height: 120px;"><svg width="120" height="120" viewBox="0 0 100 100" class="ant-progress-circle">
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 221.48228207808043px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
          <!--v-if-->
        </svg><span class="ant-progress-text">75%</span></div>
    </div>
  </div>
</div>"
`;

exports[`Progress demos > demo: Size 1`] = `
"<div style="display: flex; flex-direction: column; gap: 24px;">
  <div style="max-width: 400px; display: flex; flex-direction: column; gap: 8px;">
    <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="50" aria-valuetext="50%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Steps mode -->
      <!-- Line mode -->
      <div class="ant-progress-outer">
        <div class="ant-progress-inner" style="height: 8px; border-radius: 100px;">
          <div class="ant-progress-bg" style="width: 50%; height: 8px; border-radius: 100px;"></div>
          <!--v-if-->
        </div>
      </div><span class="ant-progress-text">50%</span>
    </div>
    <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-small" role="progressbar" aria-valuenow="50" aria-valuetext="50%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Steps mode -->
      <!-- Line mode -->
      <div class="ant-progress-outer">
        <div class="ant-progress-inner" style="height: 6px; border-radius: 100px;">
          <div class="ant-progress-bg" style="width: 50%; height: 6px; border-radius: 100px;"></div>
          <!--v-if-->
        </div>
      </div><span class="ant-progress-text">50%</span>
    </div>
    <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="50" aria-valuetext="50%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Steps mode -->
      <!-- Line mode -->
      <div class="ant-progress-outer">
        <div class="ant-progress-inner" style="height: 20px; width: 300px; border-radius: 100px;">
          <div class="ant-progress-bg" style="width: 50%; height: 20px; border-radius: 100px;"></div>
          <!--v-if-->
        </div>
      </div><span class="ant-progress-text">50%</span>
    </div>
  </div>
  <div style="display: flex; gap: 24px; align-items: center;">
    <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="50" aria-valuetext="50%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Circle / Dashboard -->
      <div class="ant-progress-inner" style="width: 120px; height: 120px;"><svg width="120" height="120" viewBox="0 0 100 100" class="ant-progress-circle">
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 147.6548547187203px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
          <!--v-if-->
        </svg><span class="ant-progress-text">50%</span></div>
    </div>
    <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info ant-progress-small" role="progressbar" aria-valuenow="50" aria-valuetext="50%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Circle / Dashboard -->
      <div class="ant-progress-inner" style="width: 80px; height: 80px;"><svg width="80" height="80" viewBox="0 0 100 100" class="ant-progress-circle">
          <path d="M 50 2.5 A 47.5 47.5 0 1 1 49.917096902619825 2.500072346618836" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="5" fill="none" class="ant-progress-circle-trail"></path>
          <path d="M 50 2.5 A 47.5 47.5 0 1 1 49.917096902619825 2.500072346618836" transform="rotate(0 50 50)" style="stroke-dasharray: 149.22565104551518px 298.45130209103036px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="5" fill="none" class="ant-progress-circle-path"></path>
          <!--v-if-->
        </svg><span class="ant-progress-text">50%</span></div>
    </div>
    <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="50" aria-valuetext="50%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Circle / Dashboard -->
      <div class="ant-progress-inner" style="width: 20px; height: 20px;"><svg width="20" height="20" viewBox="0 0 100 100" class="ant-progress-circle">
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 147.6548547187203px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
          <!--v-if-->
        </svg><span class="ant-progress-text">50%</span></div>
    </div>
  </div>
</div>"
`;

exports[`Progress demos > demo: Small 1`] = `
"<div style="display: flex; flex-direction: column; gap: 16px;">
  <div style="max-width: 200px;">
    <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-small" role="progressbar" aria-valuenow="30" aria-valuetext="30%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Steps mode -->
      <!-- Line mode -->
      <div class="ant-progress-outer">
        <div class="ant-progress-inner" style="height: 6px; border-radius: 100px;">
          <div class="ant-progress-bg" style="width: 30%; height: 6px; border-radius: 100px;"></div>
          <!--v-if-->
        </div>
      </div><span class="ant-progress-text">30%</span>
    </div>
    <div class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info ant-progress-small" role="progressbar" aria-valuenow="50" aria-valuetext="50%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Steps mode -->
      <!-- Line mode -->
      <div class="ant-progress-outer">
        <div class="ant-progress-inner" style="height: 6px; border-radius: 100px;">
          <div class="ant-progress-bg" style="width: 50%; height: 6px; border-radius: 100px;"></div>
          <!--v-if-->
        </div>
      </div><span class="ant-progress-text">50%</span>
    </div>
    <div class="ant-progress ant-progress-line ant-progress-status-exception ant-progress-show-info ant-progress-small" role="progressbar" aria-valuenow="70" aria-valuetext="70%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Steps mode -->
      <!-- Line mode -->
      <div class="ant-progress-outer">
        <div class="ant-progress-inner" style="height: 6px; border-radius: 100px;">
          <div class="ant-progress-bg" style="width: 70%; height: 6px; border-radius: 100px;"></div>
          <!--v-if-->
        </div>
      </div><span class="ant-progress-text">✕</span>
    </div>
    <div class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-small" role="progressbar" aria-valuenow="100" aria-valuetext="100%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Steps mode -->
      <!-- Line mode -->
      <div class="ant-progress-outer">
        <div class="ant-progress-inner" style="height: 6px; border-radius: 100px;">
          <div class="ant-progress-bg" style="width: 100%; height: 6px; border-radius: 100px;"></div>
          <!--v-if-->
        </div>
      </div><span class="ant-progress-text">✓</span>
    </div>
  </div>
  <div style="display: flex; gap: 12px;">
    <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="30" aria-valuetext="30%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Circle / Dashboard -->
      <div class="ant-progress-inner" style="width: 80px; height: 80px;"><svg width="80" height="80" viewBox="0 0 100 100" class="ant-progress-circle">
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 88.59291283123217px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
          <!--v-if-->
        </svg><span class="ant-progress-text">30%</span></div>
    </div>
    <div class="ant-progress ant-progress-circle ant-progress-status-exception ant-progress-show-info" role="progressbar" aria-valuenow="70" aria-valuetext="70%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Circle / Dashboard -->
      <div class="ant-progress-inner" style="width: 80px; height: 80px;"><svg width="80" height="80" viewBox="0 0 100 100" class="ant-progress-circle">
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 206.7167966062084px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
          <!--v-if-->
        </svg><span class="ant-progress-text">✕</span></div>
    </div>
    <div class="ant-progress ant-progress-circle ant-progress-status-success ant-progress-show-info" role="progressbar" aria-valuenow="100" aria-valuetext="100%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Circle / Dashboard -->
      <div class="ant-progress-inner" style="width: 80px; height: 80px;"><svg width="80" height="80" viewBox="0 0 100 100" class="ant-progress-circle">
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
          <!--v-if-->
        </svg><span class="ant-progress-text">✓</span></div>
    </div>
  </div>
</div>"
`;

exports[`Progress demos > demo: Steps 1`] = `
"<div style="display: flex; flex-direction: column; gap: 16px; max-width: 400px;">
  <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-steps" role="progressbar" aria-valuenow="50" aria-valuetext="50%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <div class="ant-progress-steps-outer">
      <div class="ant-progress-steps-item ant-progress-steps-item-active" style="height: 8px;"></div>
      <div class="ant-progress-steps-item ant-progress-steps-item-active" style="height: 8px;"></div>
      <div class="ant-progress-steps-item" style="height: 8px;"></div>
    </div><span class="ant-progress-text">50%</span>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info ant-progress-steps" role="progressbar" aria-valuenow="30" aria-valuetext="30%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <div class="ant-progress-steps-outer">
      <div class="ant-progress-steps-item ant-progress-steps-item-active" style="height: 8px;"></div>
      <div class="ant-progress-steps-item ant-progress-steps-item-active" style="height: 8px;"></div>
      <div class="ant-progress-steps-item" style="height: 8px;"></div>
      <div class="ant-progress-steps-item" style="height: 8px;"></div>
      <div class="ant-progress-steps-item" style="height: 8px;"></div>
    </div><span class="ant-progress-text">30%</span>
  </div>
  <div class="ant-progress ant-progress-line ant-progress-status-success ant-progress-show-info ant-progress-small ant-progress-steps" role="progressbar" aria-valuenow="100" aria-valuetext="100%" aria-valuemin="0" aria-valuemax="100">
    <!-- Line / Steps -->
    <!-- Steps mode -->
    <div class="ant-progress-steps-outer">
      <div class="ant-progress-steps-item ant-progress-steps-item-active" style="height: 6px;"></div>
      <div class="ant-progress-steps-item ant-progress-steps-item-active" style="height: 6px;"></div>
      <div class="ant-progress-steps-item ant-progress-steps-item-active" style="height: 6px;"></div>
      <div class="ant-progress-steps-item ant-progress-steps-item-active" style="height: 6px;"></div>
      <div class="ant-progress-steps-item ant-progress-steps-item-active" style="height: 6px;"></div>
    </div><span class="ant-progress-text">✓</span>
  </div>
</div>"
`;

exports[`Progress demos > demo: SuccessSegment 1`] = `
"<div style="display: flex; flex-direction: column; gap: 16px;">
  <div style="max-width: 400px;">
    <div class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="60" aria-valuetext="60%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Steps mode -->
      <!-- Line mode -->
      <div class="ant-progress-outer">
        <div class="ant-progress-inner" style="height: 8px; border-radius: 100px;">
          <div class="ant-progress-bg" style="width: 60%; height: 8px; border-radius: 100px;"></div>
          <div class="ant-progress-success-bg" style="width: 30%; height: 8px; border-radius: 100px;"></div>
        </div>
      </div><span class="ant-progress-text">60%</span>
    </div>
  </div>
  <div style="display: flex; gap: 24px; align-items: center;">
    <div class="ant-progress ant-progress-circle ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="60" aria-valuetext="60%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Circle / Dashboard -->
      <div class="ant-progress-inner" style="width: 120px; height: 120px;"><svg width="120" height="120" viewBox="0 0 100 100" class="ant-progress-circle">
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke-dasharray: 177.18582566246434px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
          <path d="M 50 3 A 47 47 0 1 1 49.917969566802775 3.0000715850754816" transform="rotate(0 50 50)" style="stroke: var(--color-success, #52c41a); stroke-dasharray: 88.59291283123217px 295.3097094374406px; stroke-dashoffset: -177.18582566246434px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path ant-progress-circle-success"></path>
        </svg><span class="ant-progress-text">60%</span></div>
    </div>
    <div class="ant-progress ant-progress-dashboard ant-progress-status-normal ant-progress-show-info" role="progressbar" aria-valuenow="60" aria-valuetext="60%" aria-valuemin="0" aria-valuemax="100">
      <!-- Line / Steps -->
      <!-- Circle / Dashboard -->
      <div class="ant-progress-inner" style="width: 120px; height: 120px;"><svg width="120" height="120" viewBox="0 0 100 100" class="ant-progress-circle">
          <path d="M 78.61178716340987 12.712393006311949 A 47 47 0 1 1 21.388212836590117 12.712393006311956" transform="rotate(217.5 50 50)" stroke="rgba(0, 0, 0, 0.04)" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-trail"></path>
          <path d="M 78.61178716340987 12.712393006311949 A 47 47 0 1 1 21.388212836590117 12.712393006311956" transform="rotate(217.5 50 50)" style="stroke-dasharray: 140.27211198278425px 295.3097094374406px; stroke-dashoffset: 0px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path"></path>
          <path d="M 78.61178716340987 12.712393006311949 A 47 47 0 1 1 21.388212836590117 12.712393006311956" transform="rotate(217.5 50 50)" style="stroke: var(--color-success, #52c41a); stroke-dasharray: 70.13605599139213px 295.3097094374406px; stroke-dashoffset: -140.27211198278425px; transition: stroke-dashoffset 0.3s ease, stroke-dasharray 0.3s ease, stroke 0.3s;" stroke-linecap="round" stroke-width="6" fill="none" class="ant-progress-circle-path ant-progress-circle-success"></path>
        </svg><span class="ant-progress-text">60%</span></div>
    </div>
  </div>
</div>"
`;
